--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 *** DIBS Easy for WooCommerce Changelog ***
 
-2017.08.24  - version 1.0.0
-* Fix       - Fixed a bug where invalid characters where sent to the DIBS Easy API
+2017.08.25  - version 1.0.1
+* Fix       - Fixed a bug where invalid characters could be sent (in product name) to DIBS Easy API.
+* Fix		- Error messaging improvements in console.log on checkout page.
 
 2017.07.29  - version 1.0.0
 * Tweak		- First release on wordpress.org.
