--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 *** DIBS Easy for WooCommerce Changelog ***
 
+2017.11.29  - version 1.0.6
+* Fix		- Prevent order status to be changed to Pending and back to Processing if thankyou page is reloaded and sessions aren't deleted properly.
+
 2017.11.28  - version 1.0.5
 * Tweak		- Updated SKU function to get variable ID if variable SKU is missing but parent product has SKU
 * Fix		- Adds shipping address to prepopulated fields before submitting form.
