--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 *** DIBS Easy for WooCommerce Changelog ***
 
+2017.11.29  - version 1.0.7
+* Fix		- Set WC checkout fields as not required if DIBS Easy is the selected payment gateway.
+
 2017.11.29  - version 1.0.6
 * Fix		- Prevent order status to be changed to Pending and back to Processing if thankyou page is reloaded and sessions aren't deleted properly.
 
