--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 *** DIBS Easy for WooCommerce Changelog ***
 
-2018.03.16    - version 1.3.0
+2018.06.xx    	- version 1.4.0
+* Feature       - Use template file for displaying DIBS Easy. Making it possible to overwrite via theme.
+* Feature		- Added support for DIBS webhooks (API callbacks for payment.reservation.created).
+* Tweak			- Improved messaging (saved as an order note) on order submission failure.
+
+2018.03.16    	- version 1.3.0
 * Feature       - Added support for ShippingCountries (possible to add up to 5 specific countries that the e-commerce store ship to).
 * Tweak         - Save DIBS cusotmer data addressLine2 in billing_address_2 & shipping_address_2 in WC if it exist in order.
 
