Remove argnum from format specifier
These are redundant since each placeholder is mapped to the same order as the arguments appear in the function call.

--- a/languages/dibs-easy-for-woocommerce-sv_SE.po
+++ b/languages/dibs-easy-for-woocommerce-sv_SE.po
@@ -91,15 +91,15 @@ msgstr ""
 
 #: classes/class-dibs-subscriptions.php:235
 #, php-format
-msgid "Subscription payment made with Nets. Payment ID: %1$s. Charge ID %2$s."
+msgid "Subscription payment made with Nets. Payment ID: %s. Charge ID %s."
 msgstr ""
-"Prenumerationsbetalning gjord hos Nets. Betalnings ID: %1$s. Debiterings ID "
-"%2$s."
+"Prenumerationsbetalning gjord hos Nets. Betalnings ID: %s. Debiterings ID "
+"%s."
 
 #: classes/class-dibs-subscriptions.php:241
 #, php-format
-msgid "Subscription payment failed with Nets. Error message: %1$s."
-msgstr "Prenumerationsbetalning misslyckades hos Nets. Felmeddelande: %1$s."
+msgid "Subscription payment failed with Nets. Error message: %s."
+msgstr "Prenumerationsbetalning misslyckades hos Nets. Felmeddelande: %s."
 
 #: classes/class-dibs-subscriptions.php:276
 #, php-format
@@ -109,7 +109,7 @@ msgstr "Prenumerationsbetalning genomförd hos Nets. Nets order id: %s"
 #: classes/class-dibs-subscriptions.php:282
 #, php-format
 msgid ""
-"Payment status not correct for subscription. Status: %1$s. Message: %2$s"
+"Payment status not correct for subscription. Status: %s. Message: %s"
 msgstr ""
 
 #: classes/class-dibs-subscriptions.php:288
@@ -120,7 +120,7 @@ msgstr ""
 
 #: classes/class-dibs-api-callbacks.php:148
 #, php-format
-msgid "Failed trying to receive the order from Nets. Error message: %1$s."
+msgid "Failed trying to receive the order from Nets. Error message: %s."
 msgstr ""
 
 #: classes/class-dibs-api-callbacks.php:176
@@ -144,7 +144,7 @@ msgstr ""
 #: includes/dibs-checkout-functions.php:225
 #, php-format
 msgid ""
-"New payment created in Nets Easy with Payment ID %1$s. Payment type - %2$s. "
+"New payment created in Nets Easy with Payment ID %s. Payment type - %s. "
 "Awaiting charge."
 msgstr ""
 
@@ -213,9 +213,9 @@ msgstr ""
 #. Nets refund ID.
 #: classes/class-dibs-easy-gateway.php:169
 #, php-format
-msgid "Refund made in Nets Easy with refund ID %1$s. Reason: %2$s"
+msgid "Refund made in Nets Easy with refund ID %s. Reason: %s"
 msgstr ""
-"Återbetalnings genomförd i Nets Easy med återbetalnings ID %1$s. Orsak: %2$s"
+"Återbetalnings genomförd i Nets Easy med återbetalnings ID %s. Orsak: %s"
 
 #: classes/class-dibs-easy-gateway.php:197
 msgid "Order finalized in thankyou page."
@@ -224,9 +224,9 @@ msgstr ""
 #: classes/class-dibs-order-submission-failure.php:51
 #, php-format
 msgid ""
-"New payment created in Nets Easy with Payment ID %1$s. Payment type - %2$s."
+"New payment created in Nets Easy with Payment ID %s. Payment type - %s."
 msgstr ""
-"Ny betalning skapad i Nets Easy med betalnings ID %1$s. Betalsätt - %2$s."
+"Ny betalning skapad i Nets Easy med betalnings ID %s. Betalsätt - %s."
 
 #: classes/class-dibs-order-submission-failure.php:56
 msgid ""
